[build-system]
requires = ["pbr>=6.0.0", "setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "U"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.doc8]
max-line-length = 90
