[metadata]
name = nectar-metrics
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = GPL-3.0-or-later
summary = Metrics collection for the Nectar Research Cloud
description_file =
    README.rst
keywords = nectar-metrics
home_page = https://github.com/NeCTAR-RC/nectar-metrics
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[files]
packages = nectar_metrics
include_package_data = True

[entry_points]
console_scripts =
    nectar-metrics-nova = nectar_metrics.nova:main
    nectar-metrics-cinder = nectar_metrics.cinder:main
    nectar-metrics-rcshibboleth = nectar_metrics.rcshibboleth:main
    nectar-metrics-whisper = nectar_metrics.whisper:main
    analytics-generate-cache = nectar_metrics.analytics.generate_cache:main

ceilometer.poll.central =
    nectar.accounts = nectar_metrics.ceilometer.account.pollster:UserPollster
    nectar.instances = nectar_metrics.ceilometer.compute.pollster:ComputePollster
    nectar.volumes = nectar_metrics.ceilometer.volume.cinder:CinderPollster
    nectar.cinder_pools = nectar_metrics.ceilometer.volume.cinder:CinderPoolPollster
    nectar.allocations.status = nectar_metrics.ceilometer.allocation.pollster:AllocationStatusPollster
    nectar.allocations.novaquota = nectar_metrics.ceilometer.allocation.pollster:NovaQuotaAllocationPollster
    nectar.allocations.cinderquota = nectar_metrics.ceilometer.allocation.pollster:CinderQuotaAllocationPollster
    nectar.allocations.swiftquota = nectar_metrics.ceilometer.allocation.pollster:SwiftQuotaAllocationPollster
    nectar.allocations.cloudkittyquota = nectar_metrics.ceilometer.allocation.pollster:CloudkittyQuotaAllocationPollster
    nectar.resource_providers = nectar_metrics.ceilometer.placement.pollster:ResourceProviderPollster
    nectar.container_infra = nectar_metrics.ceilometer.container_infra.pollster:MagnumClusterPollster
    nectar.orchestration.stacks = nectar_metrics.ceilometer.orchestration.pollster:HeatStackPollster
    nectar.application_catalog.environments = nectar_metrics.ceilometer.application_catalog.pollster:EnvironmentPollster
    nectar.application_catalog.packages = nectar_metrics.ceilometer.application_catalog.pollster:PackagePollster
    nectar.network_ip_availability = nectar_metrics.ceilometer.network.pollster:NetworkIPAvailabilityPollster
    nectar.databases = nectar_metrics.ceilometer.database.pollster:DatabasePollster
    nectar.loadbalancers = nectar_metrics.ceilometer.loadbalancer.pollster:LoadBalancerPollster
    nectar.virtual_desktops = nectar_metrics.ceilometer.virtual_desktop.pollster:VirtualDesktopPollster
    nectar.reservation_flavors = nectar_metrics.ceilometer.reservation.pollster:ReservationFlavorPollster

ceilometer.poll.objectstore =
    nectar.swift = nectar_metrics.ceilometer.objectstore.swift:SwiftDiskPollster

ceilometer.discover.objectstore =
    swift_disks = nectar_metrics.ceilometer.objectstore.discovery:SwiftDiskDiscovery

ceilometer.discover.central =
    all_accounts = nectar_metrics.ceilometer.account.discovery:UserDiscovery
    all_allocations = nectar_metrics.ceilometer.allocation.discovery:AllocationDiscovery
    all_instances = nectar_metrics.ceilometer.compute.discovery:InstanceAllDiscovery
    all_loadbalancers = nectar_metrics.ceilometer.loadbalancer.discovery:LoadBalancerDiscovery
    all_databases = nectar_metrics.ceilometer.database.discovery:DatabaseDiscovery
    cinder_pools = nectar_metrics.ceilometer.volume.discovery:PoolDiscovery
    resource_providers = nectar_metrics.ceilometer.placement.discovery:ResourceProviderDiscovery
    container_infra = nectar_metrics.ceilometer.container_infra.discovery:MagnumClusterDiscovery
    orchestration_stacks = nectar_metrics.ceilometer.orchestration.discovery:HeatStackDiscovery
    application_catalog_environments = nectar_metrics.ceilometer.application_catalog.discovery:EnvironmentDiscovery
    application_catalog_packages = nectar_metrics.ceilometer.application_catalog.discovery:PackageDiscovery
    network_ip_availability = nectar_metrics.ceilometer.network.discovery:NetworkIPAvailabilityDiscovery
    virtual_desktops = nectar_metrics.ceilometer.virtual_desktop.discovery:VirtualDesktopDiscovery
    reservation_flavors = nectar_metrics.ceilometer.reservation.discovery:ReservationFlavorDiscovery

[pbr]
skip_changelog = true
skip_authors = true
